fix: fix #dropdown height issue on IE by removing flx

--- a/packages/dnb-ui-lib/src/components/dropdown/style/_dropdown.scss
+++ b/packages/dnb-ui-lib/src/components/dropdown/style/_dropdown.scss
@@ -470,6 +470,10 @@
     &__shell {
       top: 0;
     }
+    &__options {
+      // IE has bug where the height can't be calculated propery
+      display: block;
+    }
   }
 }
 
